# Model-BoussinesqSphereDynamo

./: CMakeLists.txt  Readme.md
Executables/: CMakeLists.txt  RunExe.cpp.in
Git/: CMakeLists.txt
Model/Boussinesq/Sphere/Dynamo/: CMakeLists.txt  IDynamoBackend.cpp  IDynamoBackend.hpp  IDynamoModel.cpp  IDynamoModel.hpp  IDynamoState.cpp  IDynamoState.hpp  IDynamoVisualization.cpp  IDynamoVisualization.hpp  Induction.cpp  Induction.hpp  InductionKernel.cpp  InductionKernel.hpp  Momentum.cpp  Momentum.hpp  MomentumKernel.cpp  MomentumKernel.hpp  Transport.cpp  Transport.hpp  TransportKernel.cpp  TransportKernel.hpp
Model/Boussinesq/Sphere/Dynamo/Explicit/: CMakeLists.txt  ModelBackend.cpp  ModelBackend.hpp  PhysicalModel.cpp  PhysicalModel.hpp
Model/Boussinesq/Sphere/Dynamo/FdExplicit/: CMakeLists.txt  ModelBackend.cpp  ModelBackend.hpp  PhysicalModel.cpp  PhysicalModel.hpp
Model/Boussinesq/Sphere/Dynamo/Implicit/: CMakeLists.txt  ModelBackend.cpp  ModelBackend.hpp  PhysicalModel.cpp  PhysicalModel.hpp
Python/quicc/model/: boussinesq_dynamosphere.py  boussinesq_dynamosphere_blf.py  boussinesq_dynamosphere_blf_std.py  boussinesq_dynamosphere_std.py
Python/quicc/model/boussinesq/sphere/dynamo/explicit/: physical_model.py
Python/quicc/model/boussinesq/sphere/dynamo/implicit/: physical_model.py
Python/quicc_solver/model/boussinesq/sphere/dynamo/explicit/: physical_model.py
Python/quicc_solver/model/boussinesq/sphere/dynamo/implicit/: physical_model.py
TestSuite/: CMakeLists.txt  ConfigExplicit.tar.gz.sha256  ConfigImplicit.tar.gz.sha256  Explicit.tar.gz.sha256  Explicit_split_equation.tar.gz.sha256  Implicit.tar.gz.sha256  StateExplicit.tar.gz.sha256  StateImplicit.tar.gz.sha256  VisualizationExplicit.tar.gz.sha256  VisualizationImplicit.tar.gz.sha256  colorcodes.py  validate_benchmark_Explicit.py  validate_benchmark_Explicit_split_equation.py  validate_benchmark_Implicit.py  validate_config_benchmark_Explicit.py  validate_state_benchmark_Explicit.py  validate_visualization_benchmark_Explicit.py  validate_visualization_benchmark_Implicit.py  validation_tools.py
cmake.d/setup/: TestSuite.cmake
include/Model/Boussinesq/Sphere/Dynamo/: Induction.hpp  Momentum.hpp  Transport.hpp
include/Model/Boussinesq/Sphere/Dynamo/Explicit/: PhysicalModel.hpp
include/Model/Boussinesq/Sphere/Dynamo/Implicit/: PhysicalModel.hpp
include/QuICC/Model/Boussinesq/Sphere/Dynamo/: IDynamoBackend.hpp  IDynamoModel.hpp  Induction.hpp  InductionKernel.hpp  Momentum.hpp  MomentumKernel.hpp  MomentumKernelICBL.hpp  Transport.hpp  TransportKernel.hpp  TransportKernelHeat.hpp
include/QuICC/Model/Boussinesq/Sphere/Dynamo/Explicit/: ModelBackend.hpp  PhysicalModel.hpp
include/QuICC/Model/Boussinesq/Sphere/Dynamo/Implicit/: ModelBackend.hpp  PhysicalModel.hpp
src/: SourcesList.cmake
src/Model/: CMakeLists.txt  SourcesList.cmake
src/Model/Boussinesq/: SourcesList.cmake
src/Model/Boussinesq/Sphere/: CMakeLists.txt  SourcesList.cmake
src/Model/Boussinesq/Sphere/Dynamo/: CMakeLists.txt  IDynamoBackend.cpp  IDynamoModel.cpp  Induction.cpp  InductionKernel.cpp  Momentum.cpp  MomentumKernel.cpp  MomentumKernelICBL.cpp  SourcesList.cmake  Transport.cpp  TransportKernel.cpp  TransportKernelHeat.cpp
src/Model/Boussinesq/Sphere/Dynamo/Explicit/: CMakeLists.txt  ModelBackend.cpp  PhysicalModel.cpp  SourcesList.cmake
src/Model/Boussinesq/Sphere/Dynamo/Implicit/: CMakeLists.txt  ModelBackend.cpp  PhysicalModel.cpp
